tests/results/test_strategies_crypto_allocation.txt

==================================== ERRORS ====================================
_________ ERROR collecting tests/test_strategies_crypto_allocation.py __________
/usr/local/py-utils/venvs/pytest/lib/python3.11/site-packages/_pytest/python.py:498: in importtestmodule
    mod = import_path(
/usr/local/py-utils/venvs/pytest/lib/python3.11/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/usr/local/lib/python3.11/importlib/__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1204: in _gcd_import
    ???
<frozen importlib._bootstrap>:1176: in _find_and_load
    ???
<frozen importlib._bootstrap>:1147: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:690: in _load_unlocked
    ???
/usr/local/py-utils/venvs/pytest/lib/python3.11/site-packages/_pytest/assertion/rewrite.py:186: in exec_module
    exec(co, module.__dict__)
tests/test_strategies_crypto_allocation.py:2: in <module>
    from streamlit_app import load_next_csv, inverse_variance_weights
E     File "/workspaces/EARNINGTRADING3/streamlit_app.py", line 338
E       *** End Patch***
E       ^^
E   SyntaxError: invalid syntax
=========================== short test summary info ============================
ERROR tests/test_strategies_crypto_allocation.py
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
1 error in 0.21s
